--- a/public/css/index.css
+++ b/public/css/index.css
@@ -46,7 +46,7 @@ body{
 	background-color: rgba(255, 255, 255, 0.1);
 	filter:drop-shadow(3px 3px 4px black);
 }
-.baron {
+#card {
 	position: absolute;
 	right:30rem;
 	bottom:18rem;
