--- a/public/css/index.css
+++ b/public/css/index.css
@@ -69,7 +69,7 @@ body{
 	left:65rem;
 	top:28rem;
 	width:2.7rem;
-	animation:welcome 5s forwards;
+	animation:welcome1 5s forwards;
 }
 .particles{
 	width:95%;
@@ -196,6 +196,25 @@ body{
 
 
 
+@keyframes welcome1{
+	0%{
+		transform: scale(1.0);
+		-webkit-transform: scale(1.0);
+	}
+	50%{
+		transform:rotate(360deg);
+		transform: scale(40.0);
+		-webkit-transform: scale(40.0);
+		opacity:1;
+		left:56rem;
+	}
+	100%{
+		transform: scale(40.0);
+		-webkit-transform: scale(40.0);
+		opacity:0;
+			left:58rem;
+	}
+}
 @keyframes welcome{
 	0%{
 		transform: scale(1.0);
@@ -215,6 +234,7 @@ body{
 			left:42rem;
 	}
 }
+
 /* .baron:hover{
 	animation: play1 2s forwards ;
 } */
