--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6,7 +6,7 @@ body{
 }
 .princesseLogo{
 	max-width:20rem;
-	animation:pulse 5s infinite;
+	animation:pulse 5s infinite linear;
 }
 .cardPack{
 	position: absolute;
@@ -14,6 +14,45 @@ body{
 	right:13rem;
 	top:17rem;
 	filter:drop-shadow(4px 4px 7px black);
+}
+#newGame{
+	position:absolute;
+	background-image:url('https://bobandsuewilliams.com/images/black-red-1.jpg');
+	background-size: cover;
+	left:36rem;
+	top:17rem;
+	color:white;
+	width:10rem;
+	height:3rem;
+	border-style: solid;
+	border-color: black;
+	filter:contrast(2);
+}
+#newGame:hover{
+	opacity:0.7;
+	cursor:pointer;
+}
+#newGame::-moz-focus-inner{
+	border:0;
+}
+.toggleButton{
+	position:absolute;
+	right:4.7rem;
+	top:27rem;
+	background-image:url('https://bobandsuewilliams.com/images/black-red-1.jpg');
+	background-size: cover;
+	color:white;
+	width:10rem;
+	height:3rem;
+	border-style: solid;
+	border-color: black;
+}
+.toggleButton::-moz-focus-inner{
+	border:0;
+}
+.toggleButton:hover{
+	opacity:0.8;
+	cursor:pointer;
 }
 .emplacement1 {
 	position: absolute;
@@ -49,27 +88,40 @@ body{
 	filter:drop-shadow(3px 3px 4px black);
 	margin-right:5rem;
 }
-#baron {
+.baron {
 	position: absolute;
 	right:30rem;
 	top:50rem;
 	max-width:15rem;
 	min-width:15rem;
-	animation: play1 5.6s forwards ;
 }
-#princesse {
+.baron2{
+	position: absolute;
+	right:50rem;
+	top:50rem;
+	min-width:15rem;
+	max-width:15rem;
+}
+.princesse {
 	position: absolute;
 	left:30rem;
 	top:50rem;
 	max-width:15rem;
 	min-width:15rem;
-	animation: play1 5.6s forwards ;
+	animation: play1B 5.6s forwards ;
 }
-.explode{
+#explode{
 	position:absolute;
 	right:48rem;
 	top:27.6rem;
 	max-width:16rem;
+	animation:appear 5.9s forwards;
+}
+#explode2{
+	position:absolute;
+	left:36rem;
+	top:17.6rem;
+	max-width:10rem;
 	animation:appear 5.9s forwards;
 }
 .welcomeLetters{
@@ -92,9 +144,9 @@ body{
 @media screen and (max-width:1400px){
 	.princesseLogo{
 		max-width:10rem;
-		animation:pulse 5s infinite;
+		animation:pulse 5s infinite linear;
 	}
-	#baron {
+	.baron {
 		position: absolute;
 		right:30rem;
 		top:0;
@@ -102,19 +154,49 @@ body{
 		max-width:10rem;
 		animation: play1A 5.6s forwards ;
 	}
-	#princesse {
+	.baron2{
 		position: absolute;
-		left:30rem;
+		right:23rem;
+		top:23rem;
+		min-width:7rem;
+		max-width:7rem;
+		display:none;
+	}
+	.princesse {
+		position: absolute;
+		display:none;
+		left:15rem;
 		top:0;
 		min-width:10rem;
 		max-width:10rem;
-		animation: play1A 5.6s forwards ;
+		animation: play1B 2s forwards ;
+	}
+	.garde{
+		position: absolute;
+		display:none;
+		left:15rem;
+		top:0;
+		min-width:10rem;
+		max-width:10rem;
+		animation: play1C 5.6s forwards ;
+	}
+	.servante{
+		position: absolute;
+		display:none;
+		right:36rem;
+		top:0;
+		min-width:10rem;
+		max-width:10rem;
+		animation: play1D 5.6s forwards ;
 	}
 	.cardPack{
 		position: absolute;
 		max-width:10rem;
 		right:5rem;
 		top:12rem;
+	}
+	#cardPack2{
+		display:none;
 	}
 .emplacement1 {
 	position: absolute;
@@ -150,10 +232,31 @@ body{
 	filter:drop-shadow(3px 3px 4px black);
 	margin-right:0;
 }
-.explode{
+#explode{
 	position:absolute;
 	right:38rem;
 	top:17.6rem;
+	max-width:10rem;
+	animation:appear 5.9s forwards;
+}
+#explode2{
+	position:absolute;
+	left:23rem;
+	top:17.6rem;
+	max-width:10rem;
+	animation:appear 5.9s forwards;
+}
+#explode3{
+	position:absolute;
+	left:23rem;
+	top:8rem;
+	max-width:10rem;
+	animation:appear 5.9s forwards;
+}
+#explode4{
+	position:absolute;
+	right:38rem;
+	top:8rem;
 	max-width:10rem;
 	animation:appear 5.9s forwards;
 }
@@ -169,6 +272,45 @@ body{
 	max-height:35rem;
 	opacity:0.2;
 	position:absolute;
+	filter:drop-shadow(-3px -3px 4px green);
+}
+.garen {
+	position:fixed;
+	bottom:0;
+	width:7%;
+	animation:garenMove 5s infinite linear;
+}
+.gary{
+	position:absolute;
+	right:0.7rem;
+	width:20%;
+	top:1rem;
+	animation:appear2 6s forwards;
+	opacity:0;
+}
+.guy{
+	position:absolute;
+	opacity:0;
+	width:8%;
+	left:33rem;
+	top:13rem;
+	animation:appear2 6s forwards;
+}
+.troll{
+	position:absolute;
+	left:6rem;
+	top:14rem;
+	transform: rotate(45deg);
+	animation:appear2 6s forwards;
+	opacity:0;
+}
+@keyframes garenMove{
+	0%{
+		left:-6rem;
+	}
+	100%{
+		left:88rem;
+	}
 }
 @keyframes play1A {
 		0% {
@@ -206,6 +348,128 @@ body{
 				right:36rem;
 				top:18.2rem;
 		}
+}
+@keyframes play1B {
+		0% {
+				transform: scale(1.0);
+				-webkit-transform: scale(1.0);
+				right:20rem;
+				bottom:32rem;
+				opacity:0;
+		}
+		90%{
+			transform: scale(1.0);
+			-webkit-transform: scale(1.0);
+			left:7rem;
+			bottom:8rem;
+			opacity:0;
+		}
+		93%{
+			opacity:1;
+			left:12rem;
+			top:14.1rem;
+		}
+		96%{
+			transform: scale(0.85);
+			-webkit-transform: scale(0.85);
+			left:12rem;
+			top:14.1rem;
+			transform: rotate(180deg);
+		}
+		99%{
+			transform: rotate(360deg);
+		}
+		100% {
+				transform: scale(0.7);
+				-webkit-transform: scale(0.7);
+				left:21.3rem;
+				top:18.2rem;
+		}
+}
+@keyframes play1C {
+		0% {
+				transform: scale(1.0);
+				-webkit-transform: scale(1.0);
+				right:20rem;
+				bottom:32rem;
+				opacity:0;
+		}
+		90%{
+			transform: scale(1.0);
+			-webkit-transform: scale(1.0);
+			left:7rem;
+			top:0;
+			opacity:0;
+		}
+		93%{
+			opacity:1;
+			left:12rem;
+			top:0.1rem;
+		}
+		96%{
+			transform: scale(0.85);
+			-webkit-transform: scale(0.85);
+			left:12rem;
+			top:0.1rem;
+			transform: rotate(180deg);
+		}
+		99%{
+			transform: rotate(360deg);
+		}
+		100% {
+				transform: scale(0.7);
+				-webkit-transform: scale(0.7);
+				left:21.3rem;
+				top:1.2rem;
+		}
+}
+@keyframes play1D {
+		0% {
+				transform: scale(1.0);
+				-webkit-transform: scale(1.0);
+				right:20rem;
+				top:0;
+				opacity:0;
+		}
+		90%{
+			transform: scale(1.0);
+			-webkit-transform: scale(1.0);
+			right:20rem;
+			top:0rem;
+			opacity:0;
+		}
+		93%{
+			opacity:1;
+			right:28rem;
+			top:0.1rem;
+		}
+		96%{
+			transform: scale(0.85);
+			-webkit-transform: scale(0.85);
+			right:28rem;
+			top:0.1rem;
+			transform: rotate(180deg);
+		}
+		99%{
+			transform: rotate(360deg);
+		}
+		100% {
+				transform: scale(0.7);
+				-webkit-transform: scale(0.7);
+				right:36rem;
+				top:1.2rem;
+		}
+}
+@keyframes appear2{
+	0%{
+		opacity:0:
+	}
+	95%{
+		opacity: 0;
+	}
+	100%{
+		opacity:1;
+	}
 }
 }
 /*FIN RESPONSIVE PC BECODE */
