--- a/public/css/index.css
+++ b/public/css/index.css
@@ -44,13 +44,17 @@ body{
 	color:white;
 	width:10rem;
 	height:3rem;
-	border-style: solid;
-	border-color: black;
+	/* border-style: solid;
+	border-color: black; */
 }
 .toggleButton::-moz-focus-inner{
 	border:0;
 }
 .toggleButton:hover{
+	opacity:0.8;
+	cursor:pointer;
+}
+.focus:hover{
 	opacity:0.8;
 	cursor:pointer;
 }
@@ -141,7 +145,20 @@ body{
 	animation: loser 3s linear;
 	display:none;
 }
-
+#princeEffect{
+	font-family: 'Boogaloo', cursive;
+	color: black;
+	font-size:2.5rem;
+	text-align:center;
+	text-shadow: 0px 0px 2px white;
+}
+#kingEffect{
+	font-family: 'Boogaloo', cursive;
+	color: black;
+	font-size:2.5rem;
+	text-align:center;
+	text-shadow: 0px 0px 2px white;
+}
 /* RESPONSIVE PC BECODE  */
 @media screen and (max-width:1400px){
 	.princesseLogo{
@@ -212,9 +229,64 @@ body{
 		color:white;
 		width:10rem;
 		height:3rem;
-		border-style: solid;
-		border-color: black;
+		/* border-style: solid;
+		border-color: black; */
 	}
+	.focusPlayer{
+		display:none;
+	}
+#focusPlayer2{
+	position:absolute;
+	right:24rem;
+	top:12rem;
+	background-image:url('https://bobandsuewilliams.com/images/black-red-1.jpg');
+	background-size: cover;
+	color:white;
+	width:10rem;
+	height:3rem;
+	/* border-style: solid;
+	border-color: black; */
+}
+#focusPlayer3{
+	position:absolute;
+	right:24rem;
+	top:16rem;
+	background-image:url('https://bobandsuewilliams.com/images/black-red-1.jpg');
+	background-size: cover;
+	color:white;
+	width:10rem;
+	height:3rem;
+	/* border-style: solid;
+	border-color: black; */
+}
+#focusPlayer4{
+	position:absolute;
+	right:24rem;
+	top:20rem;
+	background-image:url('https://bobandsuewilliams.com/images/black-red-1.jpg');
+	background-size: cover;
+	color:white;
+	width:10rem;
+	height:3rem;
+	/* border-style: solid;
+	border-color: black; */
+}
+.princeEffect{
+	display:none;
+}
+#princeEffect{
+	margin-top:4rem;
+	margin-right:14rem;
+	animation:loser 1s ;
+}
+.kingEffect{
+	display:none;
+}
+#kingEffect{
+	margin-top:4rem;
+	margin-right:14rem;
+	animation:loser 1s ;
+}
 .emplacement1 {
 	position: absolute;
 	max-width:8rem;
@@ -238,10 +310,8 @@ body{
 	bottom:18rem;
 	max-width:7rem;
 	padding:0.3rem;
-	background-color:grey;
 	display:none;
-	border-style:solid;
-	border-color: rgba(0, 0, 0, 0.9);
+	border-style:none;
 }
 .emplacement3{
 	position: absolute;
@@ -260,6 +330,15 @@ body{
 	background-color: rgba(255, 255, 255, 0.1);
 	filter:drop-shadow(3px 3px 4px black);
 	margin-right:0;
+}
+#holdCards1>img{
+	position:absolute;
+	right:23rem;
+	bottom:0;
+	max-width:6rem;
+}
+#holdCards1:hover{
+	cursor:pointer;
 }
 .welcomeLetters{
 	position:absolute;
