--- a/public/css/index.css
+++ b/public/css/index.css
@@ -145,20 +145,15 @@ body{
 	animation: loser 3s linear;
 	display:none;
 }
-#princeEffect{
+.cardEffect{
 	font-family: 'Boogaloo', cursive;
 	color: black;
 	font-size:2.5rem;
 	text-align:center;
+	text-transform:uppercase;
 	text-shadow: 0px 0px 2px white;
 }
-#kingEffect{
-	font-family: 'Boogaloo', cursive;
-	color: black;
-	font-size:2.5rem;
-	text-align:center;
-	text-shadow: 0px 0px 2px white;
-}
+
 /* RESPONSIVE PC BECODE  */
 @media screen and (max-width:1400px){
 	.princesseLogo{
@@ -271,18 +266,19 @@ body{
 	/* border-style: solid;
 	border-color: black; */
 }
-.princeEffect{
+.priestEffect{
 	display:none;
 }
-#princeEffect{
-	margin-top:4rem;
-	margin-right:14rem;
-	animation:loser 1s ;
+.baronEffect{
+	display:none;
+}
+.princeEffect{
+	display:none;
 }
 .kingEffect{
 	display:none;
 }
-#kingEffect{
+.cardEffect{
 	margin-top:4rem;
 	margin-right:14rem;
 	animation:loser 1s ;
@@ -604,7 +600,7 @@ body{
 		opacity:1;
 	}
 	50%{
-		opacity:0.7;
+		opacity:0.5;
 	}
 	100%{
 		opacity:1;
