playable 1st card

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -157,7 +157,7 @@ body{
 	position:absolute;
 	right:33rem;
 	top:20rem;
-	background-image:url('https://bobandsuewilliams.com/images/black-red-1.jpg');
+	background:linear-gradient(#e66465, #9198e5);
 	background-size: cover;
 	color:white;
 	width:10rem;
@@ -169,7 +169,7 @@ body{
 	position:absolute;
 	right:33rem;
 	top:24rem;
-	background-image:url('https://bobandsuewilliams.com/images/black-red-1.jpg');
+	background:linear-gradient(#e66465, #9198e5);
 	background-size: cover;
 	color:white;
 	width:10rem;
@@ -181,7 +181,7 @@ body{
 	position:absolute;
 	right:36rem;
 	top:28rem;
-	background-image:url('https://bobandsuewilliams.com/images/black-red-1.jpg');
+	background:linear-gradient(#e66465, #9198e5);
 	background-size: cover;
 	color:white;
 	width:10rem;
@@ -212,8 +212,7 @@ body{
 		max-width:10rem;
 		animation:pulse 5s infinite linear;
 	}
-#card {
-		position: absolute;
+#card>img {
 		right:30rem;
 		top:20rem;
 		min-width:9rem;
@@ -379,15 +378,6 @@ body{
 	filter:drop-shadow(3px 3px 4px black);
 	margin-right:0;
 }
-#holdCards1>img{
-	position:absolute;
-	right:23rem;
-	bottom:0;
-	max-width:6rem;
-}
-#holdCards1:hover{
-	cursor:pointer;
-}
 .welcomeLetters{
 	position:absolute;
 	opacity:0;
@@ -444,21 +434,21 @@ body{
 		}
 		93%{
 			opacity:1;
-			right:28rem;
-			top:14.1rem;
+			right:20rem;
+			top:20rem;
 		}
 		96%{
 			transform: scale(0.85);
 			-webkit-transform: scale(0.85);
-			right:28rem;
-			top:14.1rem;
+			right:22rem;
+			top:22rem;
 		}
 		100% {
 			transform:rotate(360deg);
-				transform: scale(0.642);
-				-webkit-transform: scale(0.642);
-				right:5.35rem;
-				top:1rem;
+				transform: scale(0.75);
+				-webkit-transform: scale(0.75);
+				right:25rem;
+				bottom:0;
 		}
 }
 @keyframes play1B {
